# AI-Voice-Demo-Agent

./: .gitignore  README.md  docker-compose.yml
livekit-voice-agent/: .env.example  .gitignore  Dockerfile  agent.py  agentTwo.py  livekit.toml  pyproject.toml  requirements.txt
livekit-voice-ui/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json
livekit-voice-ui/app/: globals.css  layout.tsx  page.tsx
livekit-voice-ui/app/api/livekit/token/: route.ts
livekit-voice-ui/app/demo/: page.tsx
livekit-voice-ui/src/components/voice-agent/: BrandMark.tsx  LatencyBadge.tsx  MessageBubble.tsx  ProgressBar.tsx  VoiceControls.tsx  WalkthroughCard.tsx  Waveform.tsx  WelcomePanel.tsx  icons.tsx  index.ts
livekit-voice-ui/src/modules/JoinDemoCall/: index.tsx
livekit-voice-ui/src/modules/VoiceAgentUI/: index.tsx
livekit-voice-ui/src/types/: index.ts
livekit-voice-ui/src/utils/: demoRoomHandoff.ts  theme.ts
